bk_ida/gccida/g0/post_mark_life
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/post_mark_life/src/local-alloc.c:2825:34: error: must use 'enum' tag to refer to type 'machine_mode'
void  post_mark_life( int regno, machine_mode mode, int life, int birth, int death) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/post_mark_life/src/local-alloc.c:2869:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/post_mark_life/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/post_mark_life/src/local-alloc.c:2869:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/post_mark_life/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/post_mark_life/src/obj/local-alloc.o] Error 1
